# zephyr

boards/nxp/mbed_lpc1768/: Kconfig.mbed_lpc1768  board.cmake  board.yml  mbed_lpc1768.dts
boards/nxp/mbed_lpc1768/support/: openocd.cfg
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.lpc17xx  clock_control_lpc17xx.c
dts/arm/nxp/: nxp_lpc1763.dtsi  nxp_lpc1764.dtsi  nxp_lpc1765.dtsi  nxp_lpc1766.dtsi  nxp_lpc1767.dtsi  nxp_lpc1769_8.dtsi  nxp_lpc176x.dtsi
dts/arm/nxp/lpc/: nxp_lpc1768.dtsi  nxp_lpc17xx.dtsi
dts/bindings/clock/: nxp,lpc17xx-clock.yaml  nxp,lpc17xx-main-pll.yaml  nxp,lpc17xx-usb-pll.yaml
include/zephyr/drivers/clock_control/: lpc17xx_clock_control.h
modules/: Kconfig  Kconfig.lpcopen
scripts/: requirements-extras.txt
soc/nxp/lpc/: CMakeLists.txt  Kconfig  lpc_checksum.py  soc.yml
soc/nxp/lpc/lpc11u6x/: Kconfig
soc/nxp/lpc/lpc176x/: Kconfig  Kconfig.soc
soc/nxp/lpc/lpc17xx/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.c  soc.h
submanifests/: lpcopen.yaml
